--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,95 +8,135 @@
 
 
     <GridLayout
-            android:id="@+id/gridLayout"
-            android:layout_width="364dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="91dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="26dp"
-            android:background="@color/cardview_dark_background"
-            android:columnCount="5"
-            android:rowCount="2"
-            app:layout_constraintBottom_toTopOf="@+id/OutputBottom"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.428"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:context=".MainActivity">
+        android:id="@+id/gridLayout"
+        android:layout_width="381dp"
+        android:layout_height="152dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="91dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="26dp"
+        android:background="@color/cardview_dark_background"
+        android:columnCount="5"
+        android:rowCount="2"
+        app:layout_constraintBottom_toTopOf="@+id/OutputBottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".MainActivity">
 
 
         <EditText
-                android:id="@+id/gridInput_00"
-                android:layout_width="76dp"
-                android:layout_height="76dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:background="@drawable/shape"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLength="1"
-                android:textColor="@color/white"
-                android:textSize="28dp"
-                android:gravity="center"
-                />
+            android:id="@+id/gridInput_00"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:background="@drawable/shape"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="text"
+            android:maxLength="1"
+            android:textColor="@color/white"
+            android:textSize="28dp" />
 
         <EditText
-                android:id="@+id/gridInput_01"
-                android:layout_width="76dp"
-                android:layout_height="76dp"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:background="@color/cardview_dark_background"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLength="1"
-                android:textColor="@color/white"
-                android:textSize="28dp"
-                android:gravity="center"/>
+            android:id="@+id/gridInput_01"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:background="@drawable/shape"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="text"
+            android:maxLength="1"
+            android:textColor="@color/white"
+            android:textSize="28dp" />
 
         <EditText
-                android:id="@+id/gridInput_02"
-                android:layout_width="76dp"
-                android:layout_height="76dp"
-                android:layout_row="0"
-                android:layout_column="2"
-                android:background="@color/cardview_dark_background"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLength="1"
-                android:textColor="@color/white"
-                android:textSize="28dp"
-                android:gravity="center"/>
+            android:id="@+id/gridInput_02"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:background="@drawable/shape"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="text"
+            android:maxLength="1"
+            android:textColor="@color/white"
+            android:textSize="28dp" />
 
         <EditText
-                android:id="@+id/gridInput_03"
-                android:layout_width="76dp"
-                android:layout_height="76dp"
-                android:layout_row="0"
-                android:layout_column="3"
-                android:background="@color/cardview_dark_background"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLength="1"
-                android:textColor="@color/white"
-                android:textSize="28dp"
-                android:gravity="center"/>
+            android:id="@+id/gridInput_03"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:background="@drawable/shape"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="text"
+            android:maxLength="1"
+            android:textColor="@color/white"
+            android:textSize="28dp" />
 
         <EditText
-                android:id="@+id/gridInput_04"
-                android:layout_width="76dp"
-                android:layout_height="76dp"
-                android:layout_row="0"
-                android:layout_column="4"
-                android:background="@color/cardview_dark_background"
-                android:ems="10"
-                android:inputType="text"
-                android:maxLength="1"
-                android:textColor="@color/white"
-                android:textSize="28dp"
-                android:gravity="center"/>
+            android:id="@+id/gridInput_04"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="0"
+            android:layout_column="4"
+            android:background="@drawable/shape"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="text"
+            android:maxLength="1"
+            android:textColor="@color/white"
+            android:textSize="28dp" />
+
+        <Button
+            android:id="@+id/gridColor_00"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:backgroundTint="#D3D3D3"/>
+        <Button
+            android:id="@+id/gridColor_01"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:backgroundTint="#D3D3D3" />
+        <Button
+            android:id="@+id/gridColor_02"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:backgroundTint="#D3D3D3" />
+        <Button
+            android:id="@+id/gridColor_03"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:backgroundTint="#D3D3D3" />
+        <Button
+            android:id="@+id/gridColor_04"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_row="1"
+            android:layout_column="4"
+            android:backgroundTint="#D3D3D3" />
+        />
     </GridLayout>
+
+
+
+
 
     <TextView
         android:id="@+id/textView"
@@ -130,6 +170,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
