--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".MainActivity">
 
+
+    <ScrollView
+            android:layout_width="362dp"
+            android:layout_height="194dp"
+            android:layout_marginTop="21dp"
+            app:layout_constraintTop_toBottomOf="@+id/prevGuess5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/undoGuess"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/nextGuesses"
+            android:backgroundTint="#7E55C8"
+            android:background="#A8A8A8"
+            app:layout_constraintVertical_bias="0.69">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:backgroundTint="#673AB7"/>
+    </ScrollView>
+
+    <TextView
+            android:id="@+id/prevGuess5"
+            android:layout_width="80dp"
+            android:layout_height="26dp"
+            android:text="5."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.689"
+            app:layout_constraintVertical_bias="0.117"
+            android:backgroundTint="#A6A6A6"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="viewStart"
+            android:background="#A5A5A5"/>
+
+    <TextView
+            android:id="@+id/prevGuess4"
+            android:layout_width="85dp"
+            android:layout_height="29dp"
+            android:text="4."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.251"
+            app:layout_constraintVertical_bias="0.117"
+            android:backgroundTint="#A6A6A6"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="viewStart"
+            android:background="#A5A5A5"/>
+
+    <TextView
+            android:id="@+id/prevGuess3"
+            android:layout_width="86dp"
+            android:layout_height="30dp"
+            android:text="3."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.915"
+            app:layout_constraintVertical_bias="0.028"
+            android:backgroundTint="#A6A6A6"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="viewStart"
+            android:background="#A5A5A5"/>
+
+    <TextView
+            android:id="@+id/prevGuess2"
+            android:layout_width="88dp"
+            android:layout_height="31dp"
+            android:text="2."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.478"
+            app:layout_constraintVertical_bias="0.028"
+            android:backgroundTint="#A6A6A6"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="viewStart"
+            android:background="#A5A5A5"/>
+
+    <TextView
+            android:id="@+id/prevGuess1"
+            android:layout_width="98dp"
+            android:layout_height="31dp"
+            android:text="1."
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.026"
+            app:layout_constraintVertical_bias="0.028"
+            android:backgroundTint="#979797"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="viewStart"
+            android:background="#A5A5A5"/>
+
+    <TextView
+            android:text="Current Guess:"
+            android:layout_width="230dp"
+            android:layout_height="52dp"
+            android:id="@+id/currentGuess3"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="28dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="325dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="51dp"
+            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+            app:layout_constraintHorizontal_bias="0.075"
+            app:layout_constraintVertical_bias="0.0"
+            android:textSize="34sp"/>
+
+    <Button
+            android:id="@+id/undoGuess"
+            android:layout_width="173dp"
+            android:layout_height="60dp"
+            android:text="Undo Last Guess"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.785"
+            android:backgroundTint="#5D0FB5"/>
+
+    <Button
+            android:id="@+id/startOver"
+            android:layout_width="173dp"
+            android:layout_height="60dp"
+            android:text="Start Over"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.959"
+            android:backgroundTint="#A30000"
+            android:layout_marginBottom="8dp"/>
+
+    <Button
+            android:id="@+id/helpButton"
+            android:layout_width="102dp"
+            android:layout_height="60dp"
+            android:text="Help?"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="383dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.971"
+            app:layout_constraintVertical_bias="0.831"
+            android:backgroundTint="#939393"
+            android:layout_marginBottom="8dp"/>
 
     <GridLayout
             android:id="@+id/gridLayout"
             android:layout_width="381dp"
             android:layout_height="152dp"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="91dp"
+            android:layout_marginTop="70dp"
             android:layout_marginEnd="12dp"
             android:background="@color/cardview_dark_background"
             android:columnCount="5"
@@ -36,7 +221,8 @@
                 android:maxLength="1"
                 android:textColor="@color/white"
                 android:textSize="28dp"
-                android:textAllCaps="true"/>
+                android:textAllCaps="true"
+                android:textAlignment="center"/>
 
         <EditText
                 android:id="@+id/gridInput_01"
@@ -50,7 +236,8 @@
                 android:maxLength="1"
                 android:textColor="@color/white"
                 android:textSize="28dp"
-                android:textAllCaps="true"/>
+                android:textAllCaps="true"
+                android:textAlignment="center"/>
 
         <EditText
                 android:id="@+id/gridInput_02"
@@ -137,34 +324,62 @@
     </GridLayout>
 
 
-
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="310dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        android:text="Wordle Solver"
-        android:textSize="20pt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
-            android:id="@+id/button1"
+            android:id="@+id/enterGuess"
             android:layout_width="173dp"
-            android:layout_height="59dp"
-            android:layout_marginBottom="47dp"
-            android:text="Submit Response"
+            android:layout_height="60dp"
+            android:text="Enter Guess"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="120dp"
-            android:layout_marginTop="383dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="118dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.785"
+            android:backgroundTint="#2F602B"/>
+
+    <TextView
+            android:text="Current Guess:"
+            android:layout_width="230dp"
+            android:layout_height="52dp"
+            android:id="@+id/currentGuess"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="28dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="325dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="51dp"
+            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+            app:layout_constraintHorizontal_bias="0.075"
+            app:layout_constraintVertical_bias="0.0"
+            android:textSize="34sp"/>
+
+    <TextView
+            android:text="Previous Guesses:"
+            android:layout_width="148dp"
+            android:layout_height="25dp"
+            android:id="@+id/previousGuesses"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/prevGuess2"
+            android:layout_marginEnd="200dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="13dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"/>
+
+    <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline2"
+            app:layout_constraintGuide_begin="20dp"
+            android:orientation="vertical"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
