--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -388,10 +388,11 @@
             app:layout_constraintBottom_toTopOf="@+id/gridLayoutPrevGuesses"
             android:layout_marginEnd="200dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/gridLayout"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginBottom="4dp"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
