--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,19 +87,19 @@
 
 
         <EditText
-                android:id="@+id/gridInput_00"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="text"
-                android:maxLength="1"
-                android:textColor="@color/white"
-                android:textSize="28dp"
-                android:textAllCaps="true"
-                android:textAlignment="center"/>
+            android:id="@+id/gridInput_00"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="text"
+            android:maxLength="1"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="28dp" />
 
         <EditText
                 android:id="@+id/gridInput_01"
