undo button implemented (i think)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:id="@+id/undoGuess"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:backgroundTint="#1B2AAF"
+            android:backgroundTint="#2939C8"
             android:text="Undo Last Guess"
             app:layout_constraintBottom_toBottomOf="@+id/enterGuess"
             app:layout_constraintStart_toStartOf="parent"
@@ -228,7 +228,7 @@
             android:id="@+id/enterGuess"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
-            android:backgroundTint="#2F602B"
+            android:backgroundTint="#45AC3E"
             android:text="Enter Guess"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/helpButton"
